2010-01-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Close global-linum-mode, because conflict with company-mode in windows.

2010-01-07  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Add gud-tooltip-mode.

2009-12-31  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Fix gdb for working with gdb-mi.

2009-12-22  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Change highlight-symbol-idle-delay from 0.2 to 0.5.

2009-12-11  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (require): Add autopair.
	Remove autopair.

2009-12-10  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Add (global-whitespace-mode t).
	(format-region): Improve (format-region).

	* init-misc.el: Remove highlight-80+.

	* init-basic.el (c++-mode-hook): (c-set-offset 'innamespace 0).

	* init-misc.el: Add highlight-80+.

2009-12-08  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add sourcepair.

	* dotemacs.el: Improve dotemacs.el.

	* init-basic.el (grep-current-word): Add (grep-current-word).

2009-12-07  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (format-region): Add (format-region).
	(gud-enable-or-disable): Add (gud-enable-or-disable), bind to C-f9.

2009-12-06  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (move-line-up): Add (move-line-up).
	(move-line-down): Add (move-line-down).

2009-12-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (gud-kill): Add (gud-kill).
	(gud-kill): Improve (gud-kill).

2009-12-04  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (gdb-or-gud-go): Add (gdb-or-gud-go).
	(gud-break-remove): Add (gud-break-remove).

	* init-site.el: In terminal, don't active highlight-change-mode.

	* init-misc.el: In terminal, don't active highlight-sysbol-mode.

	* init-basic.el ([f6]): Bind f6 to grep-cursor.

2009-12-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add doc-mode.

	* init-basic.el: Bind C-tab to (switch-to-buffer (other-buffer)).

	* init-misc.el (require): Add window-numbering.
