@@ -1,3 +1,7 @@
+2010-01-16  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el: Add (moccur-all-buffers).
+
 2010-01-12  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Close global-linum-mode, because conflict with company-mode in windows.
